# DestinyCore-ELuna

./: CMakeLists.txt  CMakeSettings.json  M.txt
cmake/compiler/msvc/: settings.cmake
sql/updates/hotfixes/: 2026_05_29_00_hotfixes.sql
sql/updates/world/: 2026_05_18_01_world.sql  2026_05_23_00_world.sql
src/common/Cryptography/: OpenSSLCrypto.cpp
src/server/database/Database/Implementation/: HotfixDatabase.cpp  HotfixDatabase.h
src/server/game/: CMakeLists.txt
src/server/game/AI/PlayerAI/: BotAI.cpp  BotAI.h  BotAITool.cpp  PlayerAI.h
src/server/game/AI/PlayerAI/BotFieldAI/: BotFieldAI.cpp  BotFieldAI.h
src/server/game/AI/PlayerAI/BotGroupAI/: BotGroupAI.cpp
src/server/game/DataStores/: DB2LoadInfo.h  DB2Stores.cpp  DB2Stores.h  DB2Structure.h
src/server/game/Entities/Player/: CollectionMgr.cpp  Player.cpp
src/server/game/Handlers/: CharacterHandler.cpp  ChatHandler.cpp  GroupHandler.cpp  NPCHandler.cpp  TaxiHandler.cpp
src/server/game/LuaEngine/: ElunaCreatureAI.h  ElunaEventMgr.cpp  ElunaIncludes.h  ElunaInstanceAI.cpp  ElunaInstanceAI.h  ElunaLoader.cpp  ElunaLoader.h  ElunaSpellWrapper.cpp  ElunaSpellWrapper.h  ElunaTemplate.cpp  ElunaTemplate.h  ElunaUtility.cpp  ElunaUtility.h  LuaEngine.cpp  LuaEngine.h
src/server/game/LuaEngine/hooks/: HookHelpers.h  ItemHooks.cpp  ServerHooks.cpp
src/server/game/LuaEngine/methods/: Methods.cpp
src/server/game/LuaEngine/methods/TrinityCore/: AuraEffectMethods.h  AuraMethods.h  CreatureMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  SpellInfoMethods.h  SpellMethods.h  UnitMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
src/server/game/PlayerBot/: FieldBotMgr.cpp  PlayerBotMgr.cpp  PlayerBotSetting.cpp  PlayerBotTalkMgr.cpp
src/server/game/Server/: WorldSocket.cpp
src/server/game/Spells/: Spell.cpp
src/server/game/World/: World.cpp
src/server/scripts/Custom/: cs_ai_director.cpp  cs_mod_ollama.cpp  custom_script_loader.cpp
src/server/scripts/DarkmoonIsland/: darkmoon_faire.cpp
